test: compile test sources against the Java 11 API surface
Signed-off-by: Saurabh Jain <saurabh.jain@getaxonflow.com>